--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -2,3 +2,5 @@ title=Enter MRKey
 appTitle = Enter Meter Reading Key
 appDescription=
 MRKey=Meter Reading Key
+MRKey_Placeholder=Enter a meter reading key
+ChooseMRKey=Choose
